--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,17 @@
+@article{shi2017local,
+title = "On local conservation of numerical methods for conservation laws",
+journal = "Computers and Fluids",
+volume = "",
+number = "",
+pages = "",
+year = "2017",
+note = "",
+issn = "0045-7930",
+doi = "http://dx.doi.org/10.1016/j.compfluid.2017.06.018",
+url = "http://www.sciencedirect.com/science/article/pii/S004579301730230X",
+author = "Cengke Shi and Chi-Wang Shu",
+}
+
 @misc{mustonen2002logarithmic,
   title={Logarithmic mean for several arguments},
   author={Mustonen, Seppo},
