--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1615,11 +1615,15 @@ pages={663-676}
   year={2015},
   publisher={Pergamon}
 }
-@article{chan2015orthogonal,
+@article{chan2016orthogonal,
   title={Orthogonal bases for vertex-mapped pyramids},
   author={Chan, Jesse and Warburton, T},
-  journal={arXiv preprint arXiv:1502.07703},
-  year={2015}
+  journal={SIAM Journal on Scientific Computing},
+  volume={38},
+  number={2},
+  pages={A1146--A1170},
+  year={2016},
+  publisher={SIAM}
 }
 @article{chan2015comparison,
   title={A Comparison of High Order Interpolation Nodes for the Pyramid},
