updating elasticity paper

--- a/docs/elasticity_notes/letter.tex
+++ b/docs/elasticity_notes/letter.tex
@@ -5,19 +5,20 @@
 Houston, TX 77005}
 
 \begin{document}
-\begin{letter}{Dr.\ Hans De Sterck\\SIAM J. Sci. Comp. Section Editor\\Methods and Algorithms for Scientific Computing}
+\begin{letter}{Dr.\ Charbel Farhat\\Editor of IJNME}
 
-
-\opening{Dear Dr.\ Hans De Sterck}
+\opening{Dear Dr.\ Farhat}
 
 Please find enclosed the manuscript, 
 \begin{center}
 Jesse Chan\\
 \textit{Weight adjusted discontinuous Galerkin methods: matrix-valued weights and elastic wave propagation in heterogeneous media},
 \end{center}
-which we would like to submit for publication as an original research article in the SIAM Journal on Scientific Computing.  This work extends weight-adjusted inner products, which provide a low-storage approximation of the inverse of a mass matrix with respect to an $L^2$ inner product with a spatially varying weight, to the case of spatially varying matrix-valued weights.  These approximations are then applied to the simulation of elastic wave propagation in arbitrary heterogeneous media, including anisotropy and media with sub-element variations.  We also introduce a new discontinuous Galerkin method which simplifies numerical fluxes while retaining energy stability and high order accuracy.  
+which we would like to submit for publication as an original research article in IJNME.  
 
-We hope that the method and results discussed in this manuscript will appeal to the readership of SIAM Journal on Scientific Computing.  We confirm that this manuscript has not been published elsewhere and is not under consideration by another journal.  We look forward to hearing from you at your earliest convenience.
+This work extends weight-adjusted inner products, which provide a low-storage approximation of the inverse of a mass matrix with respect to an $L^2$ inner product with a spatially varying weight, to the case of spatially varying matrix-valued weights.  These approximations are then applied to the time-domain simulation of elastic wave propagation in arbitrary heterogeneous media, including anisotropy and media with sub-element variations.  The novelty of this work also includes a new energy stable and high order accurate discontinuous Galerkin method with simplified numerical fluxes for elastic wave propagation in arbitrary media.  
+
+We hope that the method and results discussed in this manuscript will appeal to the readership of IJNME.  We confirm that this manuscript has not been published elsewhere and is not under consideration by another journal.  We look forward to hearing from you at your earliest convenience.  
 
 \closing{Best regards}
 
