updating old routines

--- a/docs/splitform/dg.bib
+++ b/docs/splitform/dg.bib
@@ -1,3 +1,25 @@
+@article{shu2009high,
+  title={High order weighted essentially nonoscillatory schemes for convection dominated problems},
+  author={Shu, Chi-Wang},
+  journal={SIAM review},
+  volume={51},
+  number={1},
+  pages={82--126},
+  year={2009},
+  publisher={SIAM}
+}
+
+@article{fjordholm2012arbitrarily,
+  title={Arbitrarily high-order accurate entropy stable essentially nonoscillatory schemes for systems of conservation laws},
+  author={Fjordholm, Ulrik S and Mishra, Siddhartha and Tadmor, Eitan},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={50},
+  number={2},
+  pages={544--573},
+  year={2012},
+  publisher={SIAM}
+}
+
 @book{krantz2002primer,
   title={A primer of real analytic functions},
   author={Krantz, Steven G and Parks, Harold R},
@@ -105,6 +127,16 @@ author = "Cengke Shi and Chi-Wang Shu",
   number={1},
   pages={249--264},
   year={2003},
+  publisher={Elsevier}
+}
+
+@article{ranocha2016summation,
+  title={{Summation-by-parts operators for correction procedure via reconstruction}},
+  author={Ranocha, Hendrik and {\"O}ffner, Philipp and Sonar, Thomas},
+  journal={Journal of Computational Physics},
+  volume={311},
+  pages={299--328},
+  year={2016},
   publisher={Elsevier}
 }
 
@@ -1030,7 +1062,7 @@ publisher={Elsevier}
 
 @article{hesthaven2004high,
   title={{High-order nodal discontinuous Galerkin methods for the Maxwell eigenvalue problem}},
-  author={Hesthaven, JS and Warburton, T},
+  author={Hesthaven, Jan S and Warburton, T},
   journal={Philosophical Transactions of the Royal Society of London. Series A: Mathematical, Physical and Engineering Sciences},
   volume={362},
   number={1816},
@@ -1040,7 +1072,7 @@ publisher={Elsevier}
 }
 @article{hesthaven2002nodal,
   title={Nodal high-order methods on unstructured grids: {I.} Time-domain solution of {Maxwell's} equations},
-  author={Hesthaven, Jan S and Warburton, T.},
+  author={Hesthaven, Jan S and Warburton, T},
   journal={Journal of Computational Physics},
   volume={181},
   number={1},
@@ -1459,18 +1491,11 @@ publisher={Elsevier}
 
 @article{modave2015accelerated,
   title={Nodal Discontinuous {Galerkin} Simulations for Reverse-Time Migration on {GPU} Clusters},
-  author={Modave, Axel and St-Cyr, Amik and Mulder, Wim A and Warburton,T.},
+  author={Modave, Axel and St-Cyr, Amik and Mulder, Wim A and Warburton, T},
   journal={arXiv preprint arXiv:1506.00907},
   year={2015}
 }
 
-
-@article{vNek,
-title={{GPU} accelerated spectral finite elements on all-hex meshes},
-author={J.F. Remacle and R. Gandham and T. Warburton},
-year={2015},
-journal={arXiv preprint arXiv:1506.05996}
-}
 
 @article{xiao2010quadrature,
 title={A numerical algorithm for the construction of efficient quadrature
@@ -1576,7 +1601,7 @@ pages={663-676}
 
 @article{gandham2014gpu,
   title={{GPU} Accelerated discontinuous {G}alerkin methods for shallow water equations},
-  author={Gandham, Rajesh and Medina, DS and Warburton, T.},
+  author={Gandham, Rajesh and Medina, DS and Warburton, T},
   journal={arXiv preprint arXiv:1403.1661},
   year={2014}
 }
@@ -1783,7 +1808,7 @@ year={1957},
 
 @article{warburton2013low,
   title={A Low-Storage Curvilinear Discontinuous {G}alerkin Method for Wave Problems},
-  author={Warburton, T.},
+  author={Warburton, T},
   journal={SIAM Journal on Scientific Computing},
   volume={35},
   number={4},
@@ -1821,12 +1846,12 @@ year = {2006},
 issn = "0045-7825",
 doi = "http://dx.doi.org/10.1016/j.cma.2005.06.011",
 url = "http://www.sciencedirect.com/science/article/pii/S0045782505002665",
-author = {Warburton, T. and Embree, Mark},
+author = {Warburton, T and Embree, Mark},
 }
 
 @phdthesis{warburton1999spectral,
   title={Spectral/hp methods on polymorphic multidomains: Algorithms and applications},
-  author={Warburton, T.},
+  author={Warburton, T},
   year={1999},
   school = {Brown University}
 }
